--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-home></app-home>
+<app-menu></app-menu>
 </body>
 </html>
