--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Marie Malherbe - Portfolio</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,51 +11,51 @@
 </head>
 <body>
 <app-menu>
-<style>
- app-menu {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   height: 100vh;
-   color: pink;
-   text-transform: uppercase;
-   font-family: -apple-system,
-      BlinkMacSystemFont,
-      "Segoe UI",
-       Roboto,
-       Oxygen-Sans,
-       Ubuntu,
-       Cantarell,
-       Helvetica,
-       sans-serif;
-   font-size: 2.5em;
-   text-shadow: 2px 2px 10px rgba(0,0,0,0.2);
- }
- body {
-   background: salmon;
-   margin: 0;
-   padding: 0;
- }
-
- @keyframes dots {
-   50% {
-     transform: translateY(-.4rem);
+  <style>
+   app-menu {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     height: 100vh;
+     color: pink;
+     text-transform: uppercase;
+     font-family: -apple-system,
+        BlinkMacSystemFont,
+        "Segoe UI",
+         Roboto,
+         Oxygen-Sans,
+         Ubuntu,
+         Cantarell,
+         Helvetica,
+         sans-serif;
+     font-size: 2.5em;
+     text-shadow: 2px 2px 10px rgba(0,0,0,0.2);
    }
-   100% {
-     transform: translateY(0);
+   body {
+     background: salmon;
+     margin: 0;
+     padding: 0;
    }
- }
 
- .d {
-   animation: dots 1.5s ease-out infinite;
- }
- .d-2 {
-   animation-delay: .5s;
- }
- .d-3 {
-   animation-delay: 1s;
- }
- </style>
+   @keyframes dots {
+     50% {
+       transform: translateY(-.4rem);
+     }
+     100% {
+       transform: translateY(0);
+     }
+   }
+
+   .d {
+     animation: dots 1.5s ease-out infinite;
+   }
+   .d-2 {
+     animation-delay: .5s;
+   }
+   .d-3 {
+     animation-delay: 1s;
+   }
+   </style>
 
  Loading<span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span>
 </app-menu>
