--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
      justify-content: center;
      align-items: center;
      height: 100vh;
-     color: pink;
+     color: white;
      text-transform: uppercase;
      font-family: -apple-system,
         BlinkMacSystemFont,
@@ -29,10 +29,11 @@
          Helvetica,
          sans-serif;
      font-size: 2.5em;
-     text-shadow: 2px 2px 10px rgba(0,0,0,0.2);
    }
    body {
-     background: salmon;
+     background: -webkit-linear-gradient(top left, #99faff 0%, #bc75ff 50%, #6effd3 100%);
+     background: -o-linear-gradient(top left, #99faff 0%, #bc75ff 50%, #6effd3 100%);
+     background: linear-gradient(to bottom right, #99faff 0%, #bc75ff 50%, #6effd3 100%);
      margin: 0;
      padding: 0;
    }
